fixed overflow and added sections

--- a/style2.css
+++ b/style2.css
@@ -69,7 +69,9 @@
   label,
   input,
   textarea { display: block; }
-  
+  ion-icon{
+    color:purple ;
+  }
   button {
     font: inherit;
     background: none;
@@ -92,6 +94,7 @@
   html {
     font-family: var(--ff-poppins);
     scroll-behavior: smooth;
+    overflow-x: hidden;
   }
   
   body {
@@ -249,7 +252,304 @@
     z-index: -1;
   }
   
+  .about {
+    position: relative;
+    z-index: 1;
+    background: url("./images/about-bg.png") no-repeat;
+    background-position: center;
+    background-size: cover;
+    padding: 120px 0;
+    text-align: center;
+  }
+
+
+
+
+  
+  .about-top { margin-bottom: 120px; }
+  
+  .about .h2 { color: var(--white); }
+  
+  .about-top .section-title { margin-bottom: 20px; }
+  
+  .about-top .section-text {
+    color: var(--white);
+    font-size: var(--fs-4);
+    margin-bottom: 60px;
+  }
+  
+  .about-list {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 30px;
+  }
+  
+  .about-card {
+    background: var(--white);
+    padding: 40px;
+    border-radius: 12px;
+    box-shadow: 0 2px 4px hsla(0, 0%, 0%, 0.1);
+  }
+  
+  .card-icon {
+    color: var(--bittersweet);
+    font-size: 45px;
+    width: max-content;
+    margin-inline: auto;
+    margin-bottom: 15px;
+  }
+  
+  .about-card .card-title { margin-bottom: 15px; }
+  
+  .about-card .card-text { color: var(--davys-gray); }
+  
+  .about-bottom-banner { margin-bottom: 120px; }
+  
+  .about-bottom-banner img {
+    width: 100%;
+    height: 100%;
+  }
+  
+  .about-bottom .section-title { margin-bottom: 20px; }
+  
+  .about-bottom .section-text {
+    color: var(--white);
+    font-size: var(--fs-4);
+    margin-bottom: 40px;
+  }
+  
+  .about-bottom .btn-secondary {
+    color: var(--white);
+    margin-inline: auto;
+  }
+  
+  .speakers {
+    padding: 120px 0;
+    text-align: center;
+  }
+  
+  .speakers .section-title {
+    color: var(--royal-blue-dark);
+    margin-bottom: 20px;
+  }
+  
+  .speakers .section-text {
+    color: var(--rythm);
+    font-size: var(--fs-4);
+    margin-bottom: 120px;
+  }
+  
+  .speakers-item:first-child { margin-bottom: 100px; }
+  
+  .speakers-item-banner {
+    max-width: 350px;
+    margin-inline: auto;
+    margin-bottom: 60px;
+  }
+  
+  .speakers-item-banner img { width: 100%; }
+  
+  .speakers-item .item-title {
+    color: var(--royal-blue-dark);
+    margin-bottom: 20px;
+  }
+  
+  .speakers-item .item-text {
+    color: var(--rythm);
+    font-size: var(--fs-4);
+  }
   
   
   
   
+  
+  /*-----------------------------------*\ 
+   * #CTA
+  \*-----------------------------------*/
+  
+  .cta { padding: 120px 0; }
+  
+  .cta-card {
+    background: linear-gradient(to top, var(--bittersweet) 0, var(--french-rose));
+    padding: 80px 36px;
+    border-radius: 20px;
+    text-align: center;
+  }
+  
+  .cta-title {
+    color: var(--white);
+    font-size: var(--fs-1);
+    font-weight: var(--fw-600);
+    line-height: 1.3;
+    margin-bottom: 20px;
+  }
+  
+  .cta-text {
+    color: var(--white);
+    font-size: var(--fs-6);
+    margin-bottom: 50px;
+  }
+  
+  .cta input {
+    color: var(--white);
+    padding: 10px 15px;
+    border-bottom: 1px solid;
+    margin-bottom: 30px;
+  }
+  
+  .cta input::placeholder { color: inherit; }
+  
+  .cta .btn-secondary {
+    color: var(--white);
+    margin-inline: auto;
+  }
+
+  
+
+  
+
+  
+
+
+
+
+  .wrapper{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-gap: 15px;
+    margin: 50px;
+    padding: 0px 20px;
+
+}
+.pricing-table{
+   box-shadow: 0px 0px 18px #ccc;
+   text-align: center;
+   padding: 30px 0px;
+   border-radius: 5px;
+   position: relative;
+ 
+}
+.pricing-table .head {
+    border-bottom:1px solid #eee;
+    padding-bottom: 50px;
+    transition: all 0.5s ease;
+}
+.pricing-table:hover .head{
+   border-bottom:1px solid #8E2DE2;
+   
+}
+
+.pricing-table .head .title{
+    margin-bottom: 20px;
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.pricing-table .content .price{
+    background:linear-gradient(to right, #8E2DE2 0%, #4A00E0 100%);
+    width: 90px;
+    height: 90px;
+    margin: auto;
+    line-height: 90px;
+    border-radius: 50%;
+    border: 5px solid #fff;
+    box-shadow: 0px 0px 10px #ccc;
+    margin-top: -50px;
+     transition: all 0.5s ease;
+}
+.pricing-table:hover .content .price{
+    transform: scale(1.2);
+ 
+}
+.pricing-table .content .price h1{
+    color:#fff;
+    font-size: 30px;
+    font-weight: 700;
+}
+.pricing-table .content ul{
+   list-style-type: none;
+   margin-bottom: 20px;
+   padding-top: 10px;
+}
+
+.pricing-table .content ul li{
+    margin: 20px 0px;
+    font-size: 14px;
+    color:#555;
+}
+
+.pricing-table .content .sign-up{
+    background:linear-gradient(to right, #8E2DE2 0%, #4A00E0 100%);
+    border-radius: 40px;
+    font-weight: 500;
+    position: relative;
+    display: inline-block;
+}
+
+
+.pricing-table .btn {
+  color: #fff;
+  padding: 14px 40px;
+  display: inline-block;
+  text-align: center;
+  font-weight: 600;
+  -webkit-transition: all 0.3s linear;
+  -moz-transition: all 0.3 linear;
+  transition: all 0.3 linear;
+  border: none;
+  font-size: 14px;
+  text-transform: capitalize;
+  position: relative;
+  text-decoration: none;
+    margin: 2px;
+    z-index: 9999;
+    text-decoration: none;
+    border-radius:50px;
+ 
+}
+
+.pricing-table .btn:hover{
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3);
+}
+
+.pricing-table .btn.bordered {
+  z-index: 50;
+  color: #333;
+}
+.pricing-table:hover .btn.bordered{
+  color:#fff !important;
+}
+
+.pricing-table .btn.bordered:after {
+  background: #fff none repeat scroll 0 0;
+  border-radius: 50px;
+  content: "";
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  -webkit-transition: all 0.3s linear;
+  -moz-transition: all 0.3 linear;
+  transition: all 0.3 linear;
+  width: 100%;
+  z-index: -1;  
+  -webkit-transform:scale(1);
+  -moz-transform:scale(1);
+  transform:scale(1);
+}
+.pricing-table:hover .btn.bordered:after{
+  opacity:0;
+  transform:scale(0);
+}
+
+@media screen and (max-width:768px){
+   .wrapper{
+        grid-template-columns: repeat(2,1fr);
+    } 
+}
+
+@media screen and (max-width:600px){
+   .wrapper{
+        grid-template-columns: 1fr;
+    } 
+}
